Fix dropdown line bleeding

--- a/src/styles/_achievements.scss
+++ b/src/styles/_achievements.scss
@@ -279,6 +279,7 @@
 
           .l-shape {
             height: 50%;
+            width: 60%;
             border-bottom: 1px solid white;
             border-left: 1px solid white;
           }
